fix bug on mobile: buttons not working

--- a/gameOf10/static/css/match.css
+++ b/gameOf10/static/css/match.css
@@ -101,6 +101,8 @@ body{
     border-radius: 0.25rem;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     cursor: pointer;
+    position: relative;
+    z-index: 100;
 }
 
 .submit {
